src/objects/Data_Proxies__c.object
<CustomObject>
    <fields>
        <fullName>Alternatives__c</fullName>
        <label>Alternatives</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Frequency_of_Update__c</fullName>
        <label>Frequency of Update</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less frequent than annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Limitations__c</fullName>
        <label>Limitations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Use__c</fullName>
        <inlineHelpText>Please specify how this data or data proxy is used in the model.</inlineHelpText>
        <label>Use</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Data &amp; Proxies</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Data &amp; Proxy Data</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data &amp; Proxies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>